# awesome-generative-drink-app

./: .gitignore
backend/: .pre-commit-config.yaml  Makefile  README.md  app.py  cdk.json  pyproject.toml  stack_utils.py
backend/backend/: backend_stack.py  constants.py
backend/infrastructure/drink/: constants.py  stack.py  stack_utils.py
backend/infrastructure/drink/constructs/: api.py  secrets.py  storage.py  workflow.py
backend/lambda/: handler.py
backend/service/drink/domain_logic/: greeting.py
backend/service/drink/handlers/: handle_create_drink.py  handle_generate_recipe_image.py  handle_generate_recipe_text.py  handle_get_greeting.py  handle_persist_initial_request.py  handle_send_notification.py
backend/service/drink/models/: drink_request.py  input.py  output.py
backend/tests/: conftest.py
backend/tests/drink/integration/: conftest.py  test_persist_initial_request.py
backend/tests/drink/unit/: test_drink_request_model.py  test_get_greeting_request.py  test_greeting.py
frontend/: README.md  index.html
frontend/src/: App.jsx
