[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the greeting application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.0.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
aws-cdk-lib = "^2.0.0"
constructs = "^10.0.0"
"aws-cdk-aws-lambda-python-alpha" = "^2.160.0a0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"